examples/test/testpolicy17196.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17196
  namespace: namespace85
spec:
  podSelector:
    matchLabels:
      key4: value17
      key17: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value41
          key45: value33
          key21: value38
      podSelector:
        matchLabels:
          key47: value0
          key18: value16
